--- a/DotaMatch/app/src/main/res/values/strings.xml
+++ b/DotaMatch/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">DotaMatch</string>
+    <string name="select_role">Select your Role</string>
+    <string-array name="role_names">
+        <item>Fill</item>
+        <item>Mid</item>
+        <item>Carry</item>
+        <item>Support</item>
+        <item>Jungler</item>
+    </string-array>
 </resources>
